<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/rental_offers_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rental_offers_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rental_offers_temperature"/>

    <TextView
        android:id="@+id/rental_offers_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rental_offers_temperature"
        app:layout_constraintStart_toEndOf="@id/rental_offers_location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rental_offers_wind_condition"/>

    <TextView
        android:id="@+id/rental_offers_wind_condition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rental_offers_wind_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/rental_offers_temperature"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rental_offers_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/rental_offers_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>