<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/recycler_rental_car_brand_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recycler_rental_car_brand_txt"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/recycler_rental_car_brand_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/recycler_rental_car_model_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recycler_rental_car_model_txt"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recycler_rental_car_brand_txt"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/recycler_rental_car_model_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/recycler_rental_car_brand_current"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/recycler_rental_car_horsepower_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recycler_rental_horsepower_txt"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recycler_rental_car_model_txt"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/recycler_rental_car_horsepower_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/recycler_rental_car_model_current"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/recycler_rental_car_weight_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recycler_rental_car_weight_txt"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recycler_rental_car_horsepower_txt"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/recycler_rental_car_weight_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/recycler_rental_car_horsepower_current"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>