<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    
    <LinearLayout
        android:id="@+id/search_rental_offer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/LinearLayoutSearchRentalCar">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/search_rental_brand_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_rental_brand_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextViewSearchRentalCar"/>

            <ImageView
                android:id="@+id/search_rental_add_brand"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/add_img"
                android:contentDescription="@string/search_rental_content_description" />

            <TextView
                android:id="@+id/search_rental_selected_brand_txt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View style="@style/RentalItemDivider"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_rental_horsepower_txt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/search_rental_horsepower_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextViewSearchRentalCar"/>

            <TextView
                android:id="@+id/search_rental_selected_horsepower_txt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View style="@style/RentalItemDivider"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_rental_weight_txt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/search_rental_weight_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextViewSearchRentalCar"/>

            <TextView
                android:id="@+id/search_rental_selected_weight_txt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <View style="@style/RentalItemDivider"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_rental_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_rental_date_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextViewSearchRentalCar"/>

            <ImageView
                android:id="@+id/search_rental_date_add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/add_img"
                android:contentDescription="@string/search_rental_content_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View style="@style/RentalItemDivider"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_rental_color_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_rental_select_color_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextViewSearchRentalCar"/>

            <ImageView
                android:id="@+id/search_rental_color_add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/add_img"
                android:contentDescription="@string/search_rental_content_description" />

            <TextView
                android:id="@+id/search_rental_current_color_txt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View style="@style/RentalItemDivider"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_rental_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_rental_total_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextViewSearchRentalCar"/>

            <TextView
                android:id="@+id/search_rental_current_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>